[package]
name = "ratatui-base16"
version = "0.3.3"
edition = "2021"
authors = ["Dheepak Krishnamurthy"]
description = "A base16 palette for ratatui"
license = "MIT"
repository = "https://github.com/kdheepak/ratatui-base16"
documentation = "https://docs.rs/ratatui-base16"


[dependencies]
figment = { version = "0.10.19", features = ["env", "toml", "yaml"] }
ratatui = { version = "0.27.0", features = ["serde"] }
serde = "1.0.203"
serde_with = "3.8.2"
thiserror = "1.0.61"
